vlib/v/checker/tests/map_func_return_multiple_values_err.vv
fn fun(n int) (int, string) {
	return n, n.str()
}

fn main() {
	a := [1, 2, 3].map(fun)
	println(a)
}
